unpackaged/main/default/objects/project_cloud__Tag_Link__c/project_cloud__Tag_Link__c.object-meta.xml
<CustomObject>
    <label>Tag Link</label>
    <nameField>
        <label>Tag Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tag Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>