unpackaged/main/default/objects/project_cloud__Tag_Link__c/fields/ccpe_ocp__External_Deliverable__c.field-meta.xml
<CustomField>
    <fullName>ccpe_ocp__External_Deliverable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>External Deliverable</description>
    <inlineHelpText>External Deliverable</inlineHelpText>
    <label>External Deliverable</label>
    <referenceTo>ccpe_ocp__External_Deliverable__c</referenceTo>
    <relationshipLabel>Tag Links</relationshipLabel>
    <relationshipName>Tag_Links</relationshipName>
    <type>Lookup</type>
</CustomField>