unpackaged/main/default/objects/project_cloud__Tag_Link__c/fields/project_cloud__Checklist_Item__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Checklist_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Checklist Item</label>
    <referenceTo>project_cloud__Checklist_Item__c</referenceTo>
    <relationshipLabel>Tag Links</relationshipLabel>
    <relationshipName>Tag_Links</relationshipName>
    <type>Lookup</type>
</CustomField>