unpackaged/main/default/objects/project_cloud__Tag_Link__c/fields/project_cloud__Tag__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Tag__c</fullName>
    <label>Tag</label>
    <referenceTo>project_cloud__Tag__c</referenceTo>
    <relationshipLabel>Tag Links</relationshipLabel>
    <relationshipName>Tag_Links</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>